log
Wed 10 May 2023 09:43:37 PM UTC: 
 tests:  0|4
total_score: 0/70
92dc10a
Wed 10 May 2023 11:24:35 PM UTC: 
 heap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:33: error: expected expression before ‘Heap’
   38 |   Heap *arreglo = (Heap*)malloc(Heap);
      |                                 ^~~~
heap.c:40:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   40 |   arreglo->heapArray = (int*)malloc(3 * sizeof(int));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
b5ce7ab
